2024-08-05  Bart Schaefer  <schaefer@zsh.org>

	* 53023: Src/params.c: fix memory leak of unset private parameter

2024-08-04  Bart Schaefer  <schaefer@zsh.org>

	* Philippe Altherr: 53005: Src/exec.c: off-by-one error when
	resetting signals on subshell entrance

2024-08-03  Eric Cook  <llua@gmx.com>

	* 52989: Completion/Unix/Command/_rsync,
	Completion/Unix/Type/_remote_files: support rsync 3.2.4+ remote
	filename handling.

2024-07-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 52999: Franklin Yu (adapted): Src/init.c: Import OLDPWD from
	the environment if set.

2024-07-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52985: Src/exec.c: avoid adding original param to restorelist

2024-06-28  Bart Schaefer  <schaefer@zsh.org>

	* Philippe Altherr: 52977: Src/exec.c, Test/C03traps.ztst: fix
	and test regression so that ERR_EXIT and ERR_RETURN are respected
	by the final command in an && / || sequence.

2024-06-24  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52968: Doc/Makefile.in: use pdfroff to create intro.pdf

2024-06-13  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52951: Src/builtin.c: make sure to close memstream for 'print -v'

2024-06-08  Mikael Magnusson  <mikachu@gmail.com>

	* 52946: Completion/compdump, Completion/compinit: Revert 52768

2024-05-24  Bart Schaefer  <schaefer@zsh.org>

	* users/29882: Etc/FAQ.yo: Explain $RANDOM predictability

	* 52910: Functions/Misc/zmv: Improve handling of **/ patterns

	* 52904: Completion/Unix/Command/_git: Improve quoting of paths
	passed via _call_program to "git ls-files"

2024-05-20  Mikael Magnusson  <mikachu@gmail.com>

	* 52895: Completion/Unix/Type/_baudrates: Partial revert of
	44274 which broke _baudrates

2024-05-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 52924: Src/Modules/zftp.c: NULL zfsessions after free.

2024-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 52915: Doc/Zsh/cond.yo: be explicit about behaviour of globbing